# skillctx

./: CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: ci.yml
scripts/: sync-version.py
skills/skillctx-ify/: SKILL.md
skills/skillctx-ify/references/: known-patterns.md
skills/skillctx-sync/: SKILL.md
skills/skillctx-sync/scripts/: sync.py
tests/: test_resolve.py  test_sync.py  test_sync_version.py
